Refactor some translation keys. Add a simple markdown resource/rendering system. Add how to play information for both games.

--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -353,76 +353,79 @@
   "card.charta.blue.reverse": "Blue Reverse",
   "card.charta.blue.plus_two": "Blue +2",
 
-  "charta.button.reset": "Reset",
-  "charta.button.save": "Save",
-  "charta.button.start": "Start",
+  "button.charta.reset": "Reset",
+  "button.charta.save": "Save",
+  "button.charta.start": "Start",
 
-  "charta.rules.available_draws": "Last draw amount",
-  "charta.rules.available_draws.description": "The amount of cards you are able to draw during your round.",
-  "charta.rules.last_draw_amount": "Last draw amount",
-  "charta.rules.last_draw_amount.description": "The amount of cards you have to draw if you're on your last card and someone presses the last button before you.",
-  "charta.rules.stack_any_plus2_on_plus2": "Stack Any +2 on +2",
-  "charta.rules.stack_any_plus2_on_plus2.description": "Controls if players are allowed to stack +2 cards on top of each other, independent of their colors.",
-  "charta.rules.stack_same_plus2_on_plus2": "Stack Same +2 on +2",
-  "charta.rules.stack_same_plus2_on_plus2.description": "Controls if players are allowed to stack +2 cards on top of each other, if they're the same color.",
-  "charta.rules.stack_plus4_on_plus2": "Stack +4 on +2",
-  "charta.rules.stack_plus4_on_plus2.description": "Controls if players are allowed to stack +4 cards on top of +2 cards.",
-  "charta.rules.stack_plus4_on_plus4": "Stack +4 on +4",
-  "charta.rules.stack_plus4_on_plus4.description": "Controls if players are allowed to stack +4 cards on top of other +4 cards.",
-  "charta.rules.stack_same_plus2_on_plus4": "Stack Same +2 on +4",
-  "charta.rules.stack_same_plus2_on_plus4.description": "Controls if players are allowed to stack +2 cards on top of +4 cards, if they're the same color as the one chose by the +4 player.",
-  "charta.rules.stack_any_plus2_on_plus4": "Stack Any +2 on +4",
-  "charta.rules.stack_any_plus2_on_plus4.description": "Controls if players are allowed to stack +2 cards on top of +4 cards, independent of its color.",
+  "rule.charta.available_draws": "Last draw amount",
+  "rule.charta.available_draws.description": "The amount of cards you are able to draw during your round.",
+  "rule.charta.last_draw_amount": "Last draw amount",
+  "rule.charta.last_draw_amount.description": "The amount of cards you have to draw if you're on your last card and someone presses the last button before you.",
+  "rule.charta.stack_any_plus2_on_plus2": "Stack Any +2 on +2",
+  "rule.charta.stack_any_plus2_on_plus2.description": "Controls if players are allowed to stack +2 cards on top of each other, independent of their colors.",
+  "rule.charta.stack_same_plus2_on_plus2": "Stack Same +2 on +2",
+  "rule.charta.stack_same_plus2_on_plus2.description": "Controls if players are allowed to stack +2 cards on top of each other, if they're the same color.",
+  "rule.charta.stack_plus4_on_plus2": "Stack +4 on +2",
+  "rule.charta.stack_plus4_on_plus2.description": "Controls if players are allowed to stack +4 cards on top of +2 cards.",
+  "rule.charta.stack_plus4_on_plus4": "Stack +4 on +4",
+  "rule.charta.stack_plus4_on_plus4.description": "Controls if players are allowed to stack +4 cards on top of other +4 cards.",
+  "rule.charta.stack_same_plus2_on_plus4": "Stack Same +2 on +4",
+  "rule.charta.stack_same_plus2_on_plus4.description": "Controls if players are allowed to stack +2 cards on top of +4 cards, if they're the same color as the one chose by the +4 player.",
+  "rule.charta.stack_any_plus2_on_plus4": "Stack Any +2 on +4",
+  "rule.charta.stack_any_plus2_on_plus4.description": "Controls if players are allowed to stack +2 cards on top of +4 cards, independent of its color.",
 
-  "charta.message.put_table_cloth": "You need to put a cloth on this table.",
-  "charta.message.not_playing_current": "You're not playing the current game.",
-  "charta.message.need_to_be_sat": "You need to be sat in the table to start a game.",
-  "charta.message.invalid_card_player": "You are not a valid Card Player.",
-  "charta.message.put_chair_cloth": "You need to put a cloth on this chair.",
-  "charta.message.game_started": "Game started",
-  "charta.message.cant_play_deck": "You can't play this game with this deck.",
-  "charta.message.try_finding_another": "Try finding another one.",
-  "charta.message.table_unknown_game": "Table received an unknown game id.",
-  "charta.message.table_no_game": "Table received no game id.",
-  "charta.message.table_no_deck": "You need a deck to be able to play games.",
-  "charta.message.choose_game": "Please choose a game to play:",
-  "charta.message.not_enough_players": "There are not enough players for this game. (Minimum of %s)",
-  "charta.message.too_many_players": "There are too many players for this game. (Maximum of %s)",
-  "charta.message.you_won": "You won!",
-  "charta.message.you_lost": "You lost!",
-  "charta.message.draw": "Draw!",
-  "charta.message.congratulations": "Congratulations!",
-  "charta.message.won_the_match": "%s won the match.",
-  "charta.message.no_winner": "There were no winners.",
-  "charta.message.match_unable": "Match was unable to continue, either from lack of players or lack of cards.",
-  "charta.message.draws_left": "Draws left: %s",
-  "charta.message.your_turn": "It's your turn!",
-  "charta.message.other_turn": "It's %s's turn",
-  "charta.message.dealing_cards": "Dealing cards...",
-  "charta.message.next_player": "Next player is %s",
-  "charta.message.go_back": "Go back.",
-  "charta.message.drew_a_card": "Drew a card",
-  "charta.message.piles_shuffled": "Piles shuffled",
-  "charta.message.played_a_card": "Played a %s",
-  "charta.message.chose_a_suit": "Chose %s",
-  "charta.message.its_player_turn": "It's %s's turn",
-  "charta.message.game_reversed": "Game direction was reversed",
-  "charta.message.player_was_skipped": "%s was skipped",
-  "charta.message.its_player_turn_draw_stack": "Its %s's turn. They need to draw %s cards.",
-  "charta.message.player_said_last": "%s said last!",
-  "charta.message.player_automatically_drew_cards": "%s automatically drew %s card.",
-  "charta.message.say_last": "Say last!",
-  "charta.message.draw_all_cards": "Draw all cards.",
-  "charta.message.configure_game": "Configure game options",
-  "charta.message.this_game_options": "%s Options",
-  "charta.message.reset_options": "Reset all options to default",
-  "charta.message.save_options": "Save all options.",
-  "charta.message.start_options": "Start the game with the current options.",
-  "charta.message.original": "Original: %s",
-  "charta.message.current": "Current: %s",
-  "charta.message.custom_options": "This game has custom options!",
-  "charta.message.game_history": "History",
-  "charta.message.game_options": "Options",
-  "charta.message.game_deck": "Card Deck",
-  "charta.message.how_to_play": "How to play"
+  "message.charta.put_table_cloth": "You need to put a cloth on this table.",
+  "message.charta.not_playing_current": "You're not playing the current game.",
+  "message.charta.need_to_be_sat": "You need to be sat in the table to start a game.",
+  "message.charta.invalid_card_player": "You are not a valid Card Player.",
+  "message.charta.put_chair_cloth": "You need to put a cloth on this chair.",
+  "message.charta.game_started": "Game started",
+  "message.charta.cant_play_deck": "You can't play this game with this deck.",
+  "message.charta.try_finding_another": "Try finding another one.",
+  "message.charta.table_unknown_game": "Table received an unknown game id.",
+  "message.charta.table_no_game": "Table received no game id.",
+  "message.charta.table_no_deck": "You need a deck to be able to play games.",
+  "message.charta.choose_game": "Please choose a game to play:",
+  "message.charta.not_enough_players": "There are not enough players for this game. (Minimum of %s)",
+  "message.charta.too_many_players": "There are too many players for this game. (Maximum of %s)",
+  "message.charta.you_won": "You won!",
+  "message.charta.you_lost": "You lost!",
+  "message.charta.draw": "Draw!",
+  "message.charta.congratulations": "Congratulations!",
+  "message.charta.won_the_match": "%s won the match.",
+  "message.charta.no_winner": "There were no winners.",
+  "message.charta.match_unable": "Match was unable to continue, either from lack of players or lack of cards.",
+  "message.charta.draws_left": "Draws left: %s",
+  "message.charta.your_turn": "It's your turn!",
+  "message.charta.other_turn": "It's %s's turn",
+  "message.charta.dealing_cards": "Dealing cards...",
+  "message.charta.next_player": "Next player is %s",
+  "message.charta.go_back": "Go back.",
+  "message.charta.drew_a_card": "Drew a card",
+  "message.charta.piles_shuffled": "Piles shuffled",
+  "message.charta.played_a_card": "Played a %s",
+  "message.charta.chose_a_suit": "Chose %s",
+  "message.charta.its_player_turn": "It's %s's turn",
+  "message.charta.game_reversed": "Game direction was reversed",
+  "message.charta.player_was_skipped": "%s was skipped",
+  "message.charta.its_player_turn_draw_stack": "Its %s's turn. They need to draw %s cards.",
+  "message.charta.player_said_last": "%s said last!",
+  "message.charta.player_automatically_drew_cards": "%s automatically drew %s card.",
+  "message.charta.say_last": "Say last!",
+  "message.charta.draw_all_cards": "Draw all cards.",
+  "message.charta.configure_game": "Configure game options",
+  "message.charta.this_game_options": "%s Options",
+  "message.charta.reset_options": "Reset all options to default",
+  "message.charta.save_options": "Save all options.",
+  "message.charta.start_options": "Start the game with the current options.",
+  "message.charta.original": "Original: %s",
+  "message.charta.current": "Current: %s",
+  "message.charta.custom_options": "This game has custom options!",
+  "message.charta.game_history": "History",
+  "message.charta.game_options": "Options",
+  "message.charta.game_deck": "Card Deck",
+  "message.charta.how_to_play": "How to play %s",
+
+  "charta_md:charta.how_to_play_fun": "charta:en_us/how_to_play_fun",
+  "charta_md:charta.how_to_play_crazy_eights": "charta:en_us/how_to_play_crazy_eights"
 }
