Full klondlike solitaire implementation.

--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -396,6 +396,7 @@
   "message.charta.congratulations": "Congratulations!",
   "message.charta.won_the_match": "%s won the match.",
   "message.charta.no_winner": "There were no winners.",
+  "message.charta.give_up": "You gave up the game.",
   "message.charta.match_unable": "Match was unable to continue, either from lack of players or lack of cards.",
   "message.charta.draws_left": "Draws left: %s",
   "message.charta.your_turn": "It's your turn!",
@@ -407,6 +408,8 @@
   "message.charta.piles_shuffled": "Piles shuffled",
   "message.charta.played_a_card": "Played a %s",
   "message.charta.chose_a_suit": "Chose %s",
+  "message.charta.revealed_a_card": "Revealed a %s on tableau %s",
+  "message.charta.did_a_move": "Did a move",
   "message.charta.its_player_turn": "It's %s's turn",
   "message.charta.game_reversed": "Game direction was reversed",
   "message.charta.player_was_skipped": "%s was skipped",
