翻译了剩余的内容

--- a/src/main/resources/assets/charta/lang/zh_cn.json
+++ b/src/main/resources/assets/charta/lang/zh_cn.json
@@ -3,15 +3,15 @@
   "itemGroup.charta.decks": "Charta套牌",
   "charta.cards": "牌",
   "charta.card": "牌",
-  "charta.suits": "Suits",
-  "charta.suit": "Suit",
+  "charta.suits": "纸牌",
+  "charta.suit": "纸牌",
   "charta.color": "颜色",
   "charta.game_history": "记牌器",
   "charta.crazy_eights": "Crazy Eights",
   "charta.fun": "UNO",
-  "charta.solitaire": "Solitaire",
+  "charta.solitaire": "接龙",
   "entity.minecraft.villager.charta.dealer": "Dealer",
-  "block.charta.dealer_table": "Dealer桌",
+  "block.charta.dealer_table": "Dealer Table",
   "block.charta.oak_card_table": "橡木牌桌",
   "block.charta.oak_game_chair": "橡木椅",
   "block.charta.oak_bar_stool": "橡木吧台凳",
@@ -65,150 +65,150 @@
   "block.minecraft.banner.charta.spades": "黑桃",
   "block.minecraft.banner.charta.spades.black": "黑色黑桃",
   "block.minecraft.banner.charta.spades.blue": "蓝色黑桃",
-  "block.minecraft.banner.charta.spades.brown": "Brown 黑桃",
-  "block.minecraft.banner.charta.spades.cyan": "Cyan 黑桃",
-  "block.minecraft.banner.charta.spades.gray": "Gray 黑桃",
+  "block.minecraft.banner.charta.spades.brown": "棕色黑桃",
+  "block.minecraft.banner.charta.spades.cyan": "青色黑桃",
+  "block.minecraft.banner.charta.spades.gray": "灰色黑桃",
   "block.minecraft.banner.charta.spades.green": "绿色黑桃",
-  "block.minecraft.banner.charta.spades.light_blue": "Light 蓝色黑桃",
-  "block.minecraft.banner.charta.spades.light_gray": "Light Gray 黑桃",
-  "block.minecraft.banner.charta.spades.lime": "Lime 黑桃",
-  "block.minecraft.banner.charta.spades.magenta": "Magenta 黑桃",
-  "block.minecraft.banner.charta.spades.orange": "Orange 黑桃",
-  "block.minecraft.banner.charta.spades.pink": "Pink 黑桃",
-  "block.minecraft.banner.charta.spades.purple": "Purple 黑桃",
+  "block.minecraft.banner.charta.spades.light_blue": "亮蓝色黑桃",
+  "block.minecraft.banner.charta.spades.light_gray": "亮灰色黑桃",
+  "block.minecraft.banner.charta.spades.lime": "黄绿色黑桃",
+  "block.minecraft.banner.charta.spades.magenta": "品红色黑桃",
+  "block.minecraft.banner.charta.spades.orange": "橙色黑桃",
+  "block.minecraft.banner.charta.spades.pink": "紫色黑桃",
+  "block.minecraft.banner.charta.spades.purple": "紫色黑桃",
   "block.minecraft.banner.charta.spades.red": "红色黑桃",
-  "block.minecraft.banner.charta.spades.white": "White 黑桃",
+  "block.minecraft.banner.charta.spades.white": "白色黑桃",
   "block.minecraft.banner.charta.spades.yellow": "黄色黑桃",
-  "block.minecraft.banner.charta.hearts": "Hearts",
-  "block.minecraft.banner.charta.hearts.black": "黑色Hearts",
-  "block.minecraft.banner.charta.hearts.blue": "Blue红心",
-  "block.minecraft.banner.charta.hearts.brown": "Brown红心",
-  "block.minecraft.banner.charta.hearts.cyan": "Cyan红心",
-  "block.minecraft.banner.charta.hearts.gray": "Gray红心",
-  "block.minecraft.banner.charta.hearts.green": "Green红心",
-  "block.minecraft.banner.charta.hearts.light_blue": "Light Blue红心",
-  "block.minecraft.banner.charta.hearts.light_gray": "Light Gray红心",
-  "block.minecraft.banner.charta.hearts.lime": "Lime红心",
-  "block.minecraft.banner.charta.hearts.magenta": "Magenta红心",
-  "block.minecraft.banner.charta.hearts.orange": "Orange红心",
-  "block.minecraft.banner.charta.hearts.pink": "Pink红心",
-  "block.minecraft.banner.charta.hearts.purple": "Purple红心",
-  "block.minecraft.banner.charta.hearts.red": "Red红心",
-  "block.minecraft.banner.charta.hearts.white": "White红心",
-  "block.minecraft.banner.charta.hearts.yellow": "Yellow红心",
+  "block.minecraft.banner.charta.hearts": "红心",
+  "block.minecraft.banner.charta.hearts.black": "黑色红心",
+  "block.minecraft.banner.charta.hearts.blue": "蓝色红心",
+  "block.minecraft.banner.charta.hearts.brown": "棕色红心",
+  "block.minecraft.banner.charta.hearts.cyan": "青色红心",
+  "block.minecraft.banner.charta.hearts.gray": "灰色红心",
+  "block.minecraft.banner.charta.hearts.green": "绿色红心",
+  "block.minecraft.banner.charta.hearts.light_blue": "亮蓝色红心",
+  "block.minecraft.banner.charta.hearts.light_gray": "亮灰色红心",
+  "block.minecraft.banner.charta.hearts.lime": "黄绿色红心",
+  "block.minecraft.banner.charta.hearts.magenta": "品红色红心",
+  "block.minecraft.banner.charta.hearts.orange": "橙色红心",
+  "block.minecraft.banner.charta.hearts.pink": "紫色红心",
+  "block.minecraft.banner.charta.hearts.purple": "紫色红心",
+  "block.minecraft.banner.charta.hearts.red": "红色红心",
+  "block.minecraft.banner.charta.hearts.white": "白色红心",
+  "block.minecraft.banner.charta.hearts.yellow": "黄色红心",
   "block.minecraft.banner.charta.clubs": "梅花",
   "block.minecraft.banner.charta.clubs.black": "黑色梅花",
-  "block.minecraft.banner.charta.clubs.blue": "Blue梅花",
-  "block.minecraft.banner.charta.clubs.brown": "Brown梅花",
-  "block.minecraft.banner.charta.clubs.cyan": "Cyan梅花",
-  "block.minecraft.banner.charta.clubs.gray": "Gray梅花",
-  "block.minecraft.banner.charta.clubs.green": "Green梅花",
-  "block.minecraft.banner.charta.clubs.light_blue": "Light Blue梅花",
-  "block.minecraft.banner.charta.clubs.light_gray": "Light Gray梅花",
-  "block.minecraft.banner.charta.clubs.lime": "Lime梅花",
-  "block.minecraft.banner.charta.clubs.magenta": "Magenta梅花",
-  "block.minecraft.banner.charta.clubs.orange": "Orange梅花",
-  "block.minecraft.banner.charta.clubs.pink": "Pink梅花",
-  "block.minecraft.banner.charta.clubs.purple": "Purple梅花",
-  "block.minecraft.banner.charta.clubs.red": "Red梅花",
-  "block.minecraft.banner.charta.clubs.white": "White梅花",
-  "block.minecraft.banner.charta.clubs.yellow": "Yellow梅花",
+  "block.minecraft.banner.charta.clubs.blue": "蓝色梅花",
+  "block.minecraft.banner.charta.clubs.brown": "棕色梅花",
+  "block.minecraft.banner.charta.clubs.cyan": "青色梅花",
+  "block.minecraft.banner.charta.clubs.gray": "灰色梅花",
+  "block.minecraft.banner.charta.clubs.green": "绿色梅花",
+  "block.minecraft.banner.charta.clubs.light_blue": "亮蓝色梅花",
+  "block.minecraft.banner.charta.clubs.light_gray": "亮灰色梅花",
+  "block.minecraft.banner.charta.clubs.lime": "黄绿色梅花",
+  "block.minecraft.banner.charta.clubs.magenta": "品红色梅花",
+  "block.minecraft.banner.charta.clubs.orange": "橙色梅花",
+  "block.minecraft.banner.charta.clubs.pink": "紫色梅花",
+  "block.minecraft.banner.charta.clubs.purple": "紫色梅花",
+  "block.minecraft.banner.charta.clubs.red": "红色梅花",
+  "block.minecraft.banner.charta.clubs.white": "白色梅花",
+  "block.minecraft.banner.charta.clubs.yellow": "黄色梅花",
   "block.minecraft.banner.charta.diamonds": "方块",
   "block.minecraft.banner.charta.diamonds.black": "黑色方块",
-  "block.minecraft.banner.charta.diamonds.blue": "Blue方块",
-  "block.minecraft.banner.charta.diamonds.brown": "Brown方块",
-  "block.minecraft.banner.charta.diamonds.cyan": "Cyan方块",
-  "block.minecraft.banner.charta.diamonds.gray": "Gray方块",
-  "block.minecraft.banner.charta.diamonds.green": "Green方块",
-  "block.minecraft.banner.charta.diamonds.light_blue": "Light Blue方块",
-  "block.minecraft.banner.charta.diamonds.light_gray": "Light Gray方块",
-  "block.minecraft.banner.charta.diamonds.lime": "Lime方块",
-  "block.minecraft.banner.charta.diamonds.magenta": "Magenta方块",
-  "block.minecraft.banner.charta.diamonds.orange": "Orange方块",
-  "block.minecraft.banner.charta.diamonds.pink": "Pink方块",
-  "block.minecraft.banner.charta.diamonds.purple": "Purple方块",
-  "block.minecraft.banner.charta.diamonds.red": "Red方块",
-  "block.minecraft.banner.charta.diamonds.white": "White方块",
-  "block.minecraft.banner.charta.diamonds.yellow": "Yellow方块",
+  "block.minecraft.banner.charta.diamonds.blue": "蓝色方块",
+  "block.minecraft.banner.charta.diamonds.brown": "棕色方块",
+  "block.minecraft.banner.charta.diamonds.cyan": "青色方块",
+  "block.minecraft.banner.charta.diamonds.gray": "灰色方块",
+  "block.minecraft.banner.charta.diamonds.green": "绿色方块",
+  "block.minecraft.banner.charta.diamonds.light_blue": "亮蓝色方块",
+  "block.minecraft.banner.charta.diamonds.light_gray": "亮灰色方块",
+  "block.minecraft.banner.charta.diamonds.lime": "黄绿色方块",
+  "block.minecraft.banner.charta.diamonds.magenta": "品红色方块",
+  "block.minecraft.banner.charta.diamonds.orange": "橙色方块",
+  "block.minecraft.banner.charta.diamonds.pink": "紫色方块",
+  "block.minecraft.banner.charta.diamonds.purple": "紫色方块",
+  "block.minecraft.banner.charta.diamonds.red": "红色方块",
+  "block.minecraft.banner.charta.diamonds.white": "白色方块",
+  "block.minecraft.banner.charta.diamonds.yellow": "黄色方块",
   "item.charta.deck": "套牌",
-  "item.charta.iron_lead": "Iron Lead",
+  "item.charta.iron_lead": "金属拴绳",
   "deck.charta.unknown": "§f????",
-  "deck.charta.standard.black": "标准的Black套牌",
-  "deck.charta.standard.red": "标准的Red套牌",
-  "deck.charta.standard.blue": "标准的Blue套牌",
-  "deck.charta.standard.green": "标准的Green套牌",
-  "deck.charta.standard.yellow": "标准的Yellow套牌",
-  "deck.charta.light.aqua": "Light Aqua套牌",
-  "deck.charta.light.blue": "Light Blue套牌",
-  "deck.charta.light.green": "Light Green套牌",
-  "deck.charta.light.orange": "Light Orange套牌",
-  "deck.charta.light.pink": "Light Ping套牌",
-  "deck.charta.light.red": "Light Red套牌",
-  "deck.charta.light.yellow": "Light Yellow套牌",
-  "deck.charta.dark.aqua": "深色Aqua套牌",
-  "deck.charta.dark.blue": "深色Blue套牌",
-  "deck.charta.dark.green": "深色Green套牌",
-  "deck.charta.dark.orange": "深色Orange套牌",
-  "deck.charta.dark.pink": "深色Pink套牌",
-  "deck.charta.dark.red": "深色Red套牌",
-  "deck.charta.dark.yellow": "深色Yellow套牌",
-  "deck.charta.neon.aqua": "Neon Aqua套牌",
-  "deck.charta.neon.blue": "Neon Blue套牌",
-  "deck.charta.neon.green": "Neon Green套牌",
-  "deck.charta.neon.orange": "Neon Orange套牌",
-  "deck.charta.neon.pink": "Neon Pink套牌",
-  "deck.charta.neon.red": "Neon Red套牌",
-  "deck.charta.neon.yellow": "Neon Yellow套牌",
+  "deck.charta.standard.black": "标准的黑色套牌",
+  "deck.charta.standard.red": "标准的红色套牌",
+  "deck.charta.standard.blue": "标准的蓝色套牌",
+  "deck.charta.standard.green": "标准的绿色套牌",
+  "deck.charta.standard.yellow": "标准的黄色套牌",
+  "deck.charta.light.aqua": "亮青色套牌",
+  "deck.charta.light.blue": "亮蓝色套牌",
+  "deck.charta.light.green": "亮绿色套牌",
+  "deck.charta.light.orange": "亮橙色套牌",
+  "deck.charta.light.pink": "亮粉色套牌",
+  "deck.charta.light.red": "亮红色套牌",
+  "deck.charta.light.yellow": "亮黄色套牌",
+  "deck.charta.dark.aqua": "深青色套牌",
+  "deck.charta.dark.blue": "深蓝色套牌",
+  "deck.charta.dark.green": "深绿色套牌",
+  "deck.charta.dark.orange": "深橙色套牌",
+  "deck.charta.dark.pink": "深紫色套牌",
+  "deck.charta.dark.red": "深红色套牌",
+  "deck.charta.dark.yellow": "深色黄色套牌",
+  "deck.charta.neon.aqua": "霓虹样式的青色套牌",
+  "deck.charta.neon.blue": "霓虹样式的蓝色套牌",
+  "deck.charta.neon.green": "霓虹样式的绿色套牌",
+  "deck.charta.neon.orange": "霓虹样式的橙色套牌",
+  "deck.charta.neon.pink": "霓虹样式的紫色套牌",
+  "deck.charta.neon.red": "霓虹样式的红色套牌",
+  "deck.charta.neon.yellow": "霓虹样式的黄色套牌",
   "deck.charta.fun": "UNO套牌",
-  "deck.charta.fun_light": "UNO Light套牌",
-  "deck.charta.fun_minimal": "UNO Minimal套牌",
+  "deck.charta.fun_light": "UNO亮色套牌",
+  "deck.charta.fun_minimal": "UNO最小套牌",
   "deck.charta.fun_classic": "UNO经典套牌",
-  "deck.charta.fun_inverted": "UNO Inverted套牌",
-  "deck.charta.fun_neon": "Neon UNO套牌",
-  "deck.charta.fun_minimal_neon": "Neon UNO Minimal套牌",
-  "deck.charta.flags.argentina": "Argentina套牌",
-  "deck.charta.flags.australia": "Australia套牌",
-  "deck.charta.flags.belgium": "Belgium套牌",
-  "deck.charta.flags.brazil": "Brazil套牌",
-  "deck.charta.flags.canada": "Canada套牌",
-  "deck.charta.flags.china": "China套牌",
-  "deck.charta.flags.france": "France套牌",
-  "deck.charta.flags.germany": "Germany套牌",
-  "deck.charta.flags.india": "India套牌",
-  "deck.charta.flags.indonesia": "Indonesia套牌",
-  "deck.charta.flags.ireland": "Ireland套牌",
-  "deck.charta.flags.italy": "Italy套牌",
-  "deck.charta.flags.japan": "Japan套牌",
-  "deck.charta.flags.mexico": "Mexico套牌",
-  "deck.charta.flags.netherlands": "Netherlands套牌",
-  "deck.charta.flags.philippines": "Philippines套牌",
-  "deck.charta.flags.poland": "Poland套牌",
-  "deck.charta.flags.portugal": "Portugal套牌",
-  "deck.charta.flags.rainbow": "Rainbow套牌",
-  "deck.charta.flags.russia": "Russia套牌",
-  "deck.charta.flags.spain": "Spain套牌",
-  "deck.charta.flags.thailand": "Thailand套牌",
-  "deck.charta.flags.ukraine": "Ukraine套牌",
-  "deck.charta.flags.united_kingdom": "United Kingdom套牌",
-  "deck.charta.flags.usa": "United States套牌",
-  "deck.charta.inverted": "Inverted套牌",
-  "deck.charta.metals.copper": "Copper套牌",
-  "deck.charta.metals.gold": "Gold套牌",
-  "deck.charta.metals.iron": "Iron套牌",
-  "deck.charta.gems.diamond": "Diamond套牌",
-  "deck.charta.gems.emerald": "Emerald套牌",
-  "deck.charta.gems.ruby": "Ruby套牌",
-  "deck.charta.gems.amethyst": "Amethyst套牌",
-  "deck.charta.gems.sapphire": "Sapphire套牌",
+  "deck.charta.fun_inverted": "UNO反转套牌",
+  "deck.charta.fun_neon": "霓虹样式的UNO套牌",
+  "deck.charta.fun_minimal_neon": "霓虹样式的UNO最小套牌",
+  "deck.charta.flags.argentina": "阿根廷套牌",
+  "deck.charta.flags.australia": "澳大利亚套牌",
+  "deck.charta.flags.belgium": "比利时套牌",
+  "deck.charta.flags.brazil": "巴西套牌",
+  "deck.charta.flags.canada": "加拿大套牌",
+  "deck.charta.flags.china": "中国套牌",
+  "deck.charta.flags.france": "法国套牌",
+  "deck.charta.flags.germany": "德国套牌",
+  "deck.charta.flags.india": "印度套牌",
+  "deck.charta.flags.indonesia": "印度尼西亚套牌",
+  "deck.charta.flags.ireland": "爱尔兰套牌",
+  "deck.charta.flags.italy": "意大利套牌",
+  "deck.charta.flags.japan": "日本套牌",
+  "deck.charta.flags.mexico": "墨西哥套牌",
+  "deck.charta.flags.netherlands": "荷兰套牌",
+  "deck.charta.flags.philippines": "菲律宾套牌",
+  "deck.charta.flags.poland": "波兰套牌",
+  "deck.charta.flags.portugal": "葡萄牙套牌",
+  "deck.charta.flags.rainbow": "彩虹套牌",
+  "deck.charta.flags.russia": "俄罗斯套牌",
+  "deck.charta.flags.spain": "西班牙套牌",
+  "deck.charta.flags.thailand": "泰国套牌",
+  "deck.charta.flags.ukraine": "乌克兰套牌",
+  "deck.charta.flags.united_kingdom": "英国套牌",
+  "deck.charta.flags.usa": "美国套牌",
+  "deck.charta.inverted": "反转套牌",
+  "deck.charta.metals.copper": "铜质套牌",
+  "deck.charta.metals.gold": "金质套牌",
+  "deck.charta.metals.iron": "铁质套牌",
+  "deck.charta.gems.diamond": "钻石套牌",
+  "deck.charta.gems.emerald": "绿宝石套牌",
+  "deck.charta.gems.ruby": "红宝石套牌",
+  "deck.charta.gems.amethyst": "紫水晶套牌",
+  "deck.charta.gems.sapphire": "蓝宝石套牌",
   "suit.charta.unknown": "§f????",
   "suit.charta.spades": "黑桃",
   "suit.charta.hearts": "红心",
   "suit.charta.clubs": "梅花",
   "suit.charta.diamonds": "方块",
-  "suit.charta.red": "Red",
-  "suit.charta.yellow": "Yellow",
-  "suit.charta.green": "Green",
-  "suit.charta.blue": "Blue",
+  "suit.charta.red": "红色",
+  "suit.charta.yellow": "黄色",
+  "suit.charta.green": "绿色",
+  "suit.charta.blue": "蓝色",
   "card.charta.unknown": "§f????",
   "card.charta.spades.ace": "黑桃A",
   "card.charta.spades.two": "黑桃2",
@@ -222,7 +222,7 @@
   "card.charta.spades.ten": "黑桃10",
   "card.charta.spades.jack": "黑桃J",
   "card.charta.spades.queen": "黑桃Q",
-  "card.charta.spades.king": "King of 黑桃",
+  "card.charta.spades.king": " 黑桃K",
   "card.charta.spades.joker": "Joker of 黑桃",
   "card.charta.hearts.ace": "红心A",
   "card.charta.hearts.two": "红心2",
@@ -236,7 +236,7 @@
   "card.charta.hearts.ten": "红心10",
   "card.charta.hearts.jack": "红心J",
   "card.charta.hearts.queen": "红心Q",
-  "card.charta.hearts.king": "King of红心",
+  "card.charta.hearts.king": "红心K",
   "card.charta.hearts.joker": "Joker of红心",
   "card.charta.clubs.ace": "梅花A",
   "card.charta.clubs.two": "梅花2",
@@ -250,7 +250,7 @@
   "card.charta.clubs.ten": "梅花10",
   "card.charta.clubs.jack": "梅花J",
   "card.charta.clubs.queen": "梅花Q",
-  "card.charta.clubs.king": "King of梅花",
+  "card.charta.clubs.king": "梅花K",
   "card.charta.clubs.joker": "Joker of梅花",
   "card.charta.diamonds.ace": "方块A",
   "card.charta.diamonds.two": "方块2",
@@ -264,7 +264,7 @@
   "card.charta.diamonds.ten": "方块10",
   "card.charta.diamonds.jack": "方块J",
   "card.charta.diamonds.queen": "方块Q",
-  "card.charta.diamonds.king": "King of方块",
+  "card.charta.diamonds.king": "方块K",
   "card.charta.diamonds.joker": "Joker of方块",
   "card.charta.wild": "§f万能牌",
   "card.charta.wild_plus_four": "§f万能+4",
@@ -360,7 +360,7 @@
   "message.charta.too_many_players": "这个游戏的玩家人数过多。（最多 %s 人）",
   "message.charta.you_won": "你赢了！",
   "message.charta.you_lost": "你输了！",
-  "message.charta.draw": "抽！",
+  "message.charta.draw": "平局",
   "message.charta.congratulations": "恭喜！",
   "message.charta.won_the_match": "%s 赢得了比赛！",
   "message.charta.no_winner": "这场比赛没有赢家。",
@@ -371,20 +371,20 @@
   "message.charta.other_turn": "现在是 %s 的回合！",
   "message.charta.dealing_cards": "Dealing cards...",
   "message.charta.next_player": "下一个玩家是 %s",
-  "message.charta.go_back": "Go back.",
-  "message.charta.drew_a_card": "Drew a card",
+  "message.charta.go_back": "返回",
+  "message.charta.drew_a_card": "抽了一张牌",
   "message.charta.piles_shuffled": "Piles shuffled",
-  "message.charta.played_a_card": "Played a %s",
-  "message.charta.chose_a_suit": "Chose %s",
+  "message.charta.played_a_card": "打出了一张 %s",
+  "message.charta.chose_a_suit": "选择了 %s",
   "message.charta.revealed_a_card": "Revealed a %s on tableau %s",
   "message.charta.did_a_move": "移动了",
   "message.charta.its_player_turn": "现在是 %s 的回合",
-  "message.charta.game_reversed": "Game direction was reversed",
+  "message.charta.game_reversed": "游戏的方向改变了",
   "message.charta.player_was_skipped": "%s 跳过了",
-  "message.charta.its_player_turn_draw_stack": "Its %s's turn. They need to draw %s cards.",
-  "message.charta.player_said_last": "%s said last!",
+  "message.charta.its_player_turn_draw_stack": "现在是 %s 的回合，他需要抽 %s 张牌",
+  "message.charta.player_said_last": "%s 喊出了UNO！",
   "message.charta.player_automatically_drew_cards": "%s 自动的抽取了 %s 张牌",
-  "message.charta.say_last": "Say last!",
+  "message.charta.say_last": "喊UNO！",
   "message.charta.draw_all_cards": "抽取所有牌",
   "message.charta.configure_game": "配置游戏选项",
   "message.charta.play_game": "开始玩",
@@ -397,7 +397,7 @@
   "message.charta.custom_options": "这场游戏有自定义选项",
   "message.charta.game_history": "记牌器",
   "message.charta.game_options": "选项",
-  "message.charta.game_deck": "牌套牌",
+  "message.charta.game_deck": "套牌详情",
   "message.charta.how_to_play": "如何玩？",
   "message.charta.are_you_sure": "你确定吗？",
   "message.charta.leaving_game": "离开这张椅子会使你放弃这场游戏，并提前结束游戏。",
