Added some missing translations

--- a/src/main/resources/assets/charta/lang/zh_cn.json
+++ b/src/main/resources/assets/charta/lang/zh_cn.json
@@ -7,11 +7,13 @@
   "charta.suit": "纸牌",
   "charta.color": "颜色",
   "charta.game_history": "记牌器",
-  "charta.crazy_eights": "Crazy Eights",
+  "charta.crazy_eights": "疯狂八点",
   "charta.fun": "UNO",
   "charta.solitaire": "接龙",
   "entity.minecraft.villager.charta.dealer": "Dealer",
   "block.charta.dealer_table": "Dealer Table",
+  "entity.minecraft.villager.charta.dealer": "庄家",
+  "block.charta.dealer_table": "庄家桌",
   "block.charta.oak_card_table": "橡木牌桌",
   "block.charta.oak_game_chair": "橡木椅",
   "block.charta.oak_bar_stool": "橡木吧台凳",
@@ -367,6 +369,7 @@
   "message.charta.give_up": "你放弃了这场比赛。",
   "message.charta.match_unable": "比赛无法继续，不是因为没有玩家，就是没有牌。",
   "message.charta.draws_left": "Draws left: %s",
+  "message.charta.draws_left": "剩余抽牌机会: %s",
   "message.charta.your_turn": "现在是你的回合！",
   "message.charta.other_turn": "现在是 %s 的回合！",
   "message.charta.dealing_cards": "Dealing cards...",
