--- a/src/main/resources/assets/charta/lang/zh_cn.json
+++ b/src/main/resources/assets/charta/lang/zh_cn.json
@@ -362,21 +362,21 @@
   "message.charta.you_lost": "你输了！",
   "message.charta.draw": "平局！",
   "message.charta.congratulations": "恭喜！",
-  "message.charta.won_the_match": "%s 赢得了比赛！",
-  "message.charta.no_winner": "这场比赛没有赢家。",
-  "message.charta.give_up": "你放弃了这场比赛。",
+  "message.charta.won_the_match": "%s 赢得了游戏！",
+  "message.charta.no_winner": "这场游戏没有赢家。",
+  "message.charta.give_up": "你放弃了这场游戏。",
   "message.charta.match_unable": "游戏无法继续，不是因为没有玩家，就是没有牌。",
   "message.charta.draws_left": "剩余抽牌机会: %s",
   "message.charta.your_turn": "现在是你的回合！",
   "message.charta.other_turn": "现在是 %s 的回合！",
-  "message.charta.dealing_cards": "Dealing cards...",
+  "message.charta.dealing_cards": "发牌中...",
   "message.charta.next_player": "下一个玩家是 %s",
   "message.charta.go_back": "返回",
   "message.charta.drew_a_card": "抽了一张牌",
-  "message.charta.piles_shuffled": "牌堆已打",
+  "message.charta.piles_shuffled": "牌堆已打乱",
   "message.charta.played_a_card": "打出了一张 %s",
   "message.charta.chose_a_suit": "选择了 %s",
-  "message.charta.revealed_a_card": "Revealed a %s on tableau %s",
+  "message.charta.revealed_a_card": "揭开了一张 %s 于 %s 上",
   "message.charta.did_a_move": "移动了",
   "message.charta.its_player_turn": "现在是 %s 的回合",
   "message.charta.game_reversed": "游戏的方向改变了",
