Replace UNO with FUN

--- a/src/main/resources/assets/charta/lang/zh_cn.json
+++ b/src/main/resources/assets/charta/lang/zh_cn.json
@@ -8,7 +8,7 @@
   "charta.color": "颜色",
   "charta.game_history": "记牌器",
   "charta.crazy_eights": "疯狂八点",
-  "charta.fun": "UNO",
+  "charta.fun": "FUN",
   "charta.solitaire": "纸牌接龙",
   "entity.minecraft.villager.charta.dealer": "庄家",
   "block.charta.dealer_table": "庄家桌",
@@ -159,13 +159,13 @@
   "deck.charta.neon.pink": "紫色荧光牌组",
   "deck.charta.neon.red": "红色荧光牌组",
   "deck.charta.neon.yellow": "黄色荧光牌组",
-  "deck.charta.fun": "UNO牌组",
-  "deck.charta.fun_light": "UNO亮色牌组",
-  "deck.charta.fun_minimal": "UNO最小牌组",
-  "deck.charta.fun_classic": "UNO经典牌组",
-  "deck.charta.fun_inverted": "UNO反转牌组",
-  "deck.charta.fun_neon": "荧光UNO牌组",
-  "deck.charta.fun_minimal_neon": "荧光UNO最小牌组",
+  "deck.charta.fun": "FUN牌组",
+  "deck.charta.fun_light": "FUN亮色牌组",
+  "deck.charta.fun_minimal": "FUN最小牌组",
+  "deck.charta.fun_classic": "FUN经典牌组",
+  "deck.charta.fun_inverted": "FUN反转牌组",
+  "deck.charta.fun_neon": "荧光FUN牌组",
+  "deck.charta.fun_minimal_neon": "荧光FUN最小牌组",
   "deck.charta.flags.argentina": "阿根廷牌组",
   "deck.charta.flags.australia": "澳大利亚牌组",
   "deck.charta.flags.belgium": "比利时牌组",
