Implement undo logic for solitaire. Fix a few bugs with it. Hopefully don't break other games :D

--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -440,6 +440,7 @@
   "message.charta.leaving_game": "Leaving this chair will make you abandon the game, finishing it prematurely.",
   "message.charta.undo": "Undo your last move",
   "message.charta.hint": "Gives you a hint",
+  "message.charta.moves": "%s moves",
 
   "charta_md:charta.how_to_play_fun": "charta:en_us/how_to_play_fun",
   "charta_md:charta.how_to_play_crazy_eights": "charta:en_us/how_to_play_crazy_eights",
